test/corpus/html_elements.txt
==================
Basic HTML Element
==================
<div class="container">
    <span>Content</span>
</div>

---

(document
  (html_element
    (html_start_tag
      (tag_name)
      (html_attribute
        (attribute_name)
        (attribute_value
          (quoted_attribute_value))))
    (text
      (raw_text))
    (html_element
      (html_start_tag
        (tag_name))
      (text
        (raw_text))
      (html_end_tag
        (tag_name)))
    (text
      (raw_text))
    (html_end_tag
      (tag_name)))
  (text
    (raw_text)))

==================
Self-Closing Element
==================
<br/>
<hr/>

---

(document
  (html_self_closing_element
    (tag_name))
  (text
    (raw_text))
  (html_self_closing_element
    (tag_name))
  (text
    (raw_text)))

==================
HTML Comment
==================
<!-- This is a comment -->
<p>Text</p>

---

(document
  (html_comment
    (html_comment_content))
  (text
    (raw_text))
  (html_element
    (html_start_tag
      (tag_name))
    (text
      (raw_text))
    (html_end_tag
      (tag_name)))
  (text
    (raw_text)))

==================
Razor Comment
==================
@* This is a razor comment *@
<p>Visible</p>

---

(document
  (razor_comment
    (comment_content))
  (text
    (raw_text))
  (html_element
    (html_start_tag
      (tag_name))
    (text
      (raw_text))
    (html_end_tag
      (tag_name)))
  (text
    (raw_text)))

==================
Razor Directive Attribute
==================
<button @onclick="HandleClick">Click</button>

---

(document
  (html_element
    (html_start_tag
      (tag_name)
      (html_attribute
        (attribute_name)
        (attribute_value
          (quoted_attribute_value))))
    (text
      (raw_text))
    (html_end_tag
      (tag_name)))
  (text
    (raw_text)))

==================
Empty Razor Comment
==================
@**@

---

(document
  (razor_comment)
  (text
    (raw_text)))
